# Recipify

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo.py  example.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
dataset/train/: labels.cache
dataset/train/labels/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
dataset/val/: labels.cache
dataset/val/labels/: 16.txt  17.txt  18.txt  19.txt
examples/: example.py
recipify/: classification.py  dataset.yaml  dataset_processing.py  extraction.py  ocr.py  preprocessing.py  train.py  training.py
recipify.egg-info/: SOURCES.txt  requires.txt  top_level.txt
recipify/tests/: test_extraction.py
recipify/utils/: logging.py
recipify_env/: pyvenv.cfg
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml  results.csv
runs/detect/train3/: args.yaml  results.csv
