[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recipify"
version = "0.1.0"
description = "A powerful receipt data extraction tool using YOLO11 and Tesseract OCR"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Subhashh", email = "your.email@example.com" }
]
dependencies = [
    "opencv-python>=4.8.0",
    "pytesseract>=0.3.10",
    "ultralytics>=8.0.0",
    "spacy>=3.7.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=recipify --cov-report=term-missing" 